Fix remaining mobile overflow on login, purchase, and car detail pages
- .form-container (login/signup): remove margin-left:200px, center it
- .container form (purchase): remove margin-left:600px, center and constrain width
- .col-1 (bmwM/GLE/GT3RS/mclaren540C): remove margin:100px padding-left:250px

--- a/responsive.css
+++ b/responsive.css
@@ -431,11 +431,39 @@
     box-sizing: border-box !important;
   }
 
-  /* Purchase info page */
+  /* Purchase info page - .container form has margin-left:600px width:500px */
+  .container form {
+    margin-left: auto !important;
+    margin-right: auto !important;
+    width: 90% !important;
+    max-width: 400px !important;
+    padding: 20px !important;
+  }
+  /* container background has padding:330px */
+  .container.lpage, .container {
+    padding: 15px !important;
+  }
   .purchase-container, .bill-container {
     width: 90% !important;
     margin: 80px auto 20px !important;
     padding: 15px !important;
+  }
+
+  /* Login/Signup - .form-container has margin-left:200px width:300px */
+  .form-container {
+    margin-left: auto !important;
+    margin-right: auto !important;
+    width: 88% !important;
+    max-width: 360px !important;
+  }
+
+  /* col-1 on individual car pages (bmwM, GLE, GT3RS, mclaren540C) has margin:100px padding-left:250px */
+  .col-1 {
+    margin: 80px auto 0 !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    height: auto !important;
+    width: 100% !important;
   }
 
   /* Bottom image in slide menu */
